# ROS-Driver

./: .gitignore
.github/workflows/: codacy.yml  ros1-melodic-cicd.yml
ROS-Driver-Update/roboteq_motor_controller_driver/: CMakeLists.txt  package.xml  roboteq_broadcaster_plugin.xml  roboteq_hardware_interface_plugin.xml
ROS-Driver-Update/roboteq_motor_controller_driver/config/: names.txt  odom_noimu.yaml  odom_test.yaml  query.yaml  query_brush.yaml  query_mower.yaml  query_prismatic.yaml  query_wheel.yaml  roboteq_controllers.yaml  roboteq_driver.yaml  roboteq_update_rate.yaml
ROS-Driver-Update/roboteq_motor_controller_driver/include/roboteq_motor_controller_driver/: diff_odom.h  roboteq_broadcaster.hpp  roboteq_hardware_interface.hpp  roboteq_motor_controller_driver.h  roboteq_motor_controller_driver_node.h  roboteq_motor_controller_driver_node_rpm.h
ROS-Driver-Update/roboteq_motor_controller_driver/launch/: bring_up.launch  diff_odom.launch  diff_odom_noimu.launch  diff_odom_spyros.launch  driver.launch  driver_brush.launch  driver_mower.launch  driver_prismatic.launch  driver_wheel.launch  roboteq.launch.py  roboteq_motor_controller_driver_node.cpp
ROS-Driver-Update/roboteq_motor_controller_driver/scripts/: service_wrapper.py
ROS-Driver-Update/roboteq_motor_controller_driver/src/: diff_odom copy.cpp  diff_odom.cpp  diff_odom_parameters.yaml  diff_odom_spyros_24_2.cpp  roboteq_broadcaster.cpp  roboteq_hardware_interface.cpp  roboteq_hardware_interface_parameters.yaml  roboteq_motor_controller_driver.cpp  roboteq_motor_controller_driver_node.cpp  roboteq_motor_controller_driver_node_10_rates.cpp  roboteq_motor_controller_driver_node_2_rates.cpp  roboteq_motor_controller_driver_node_brush copy.cpp  roboteq_motor_controller_driver_node_brush.cpp  roboteq_motor_controller_driver_node_frequency_changes.cpp  roboteq_motor_controller_driver_node_mower.cpp  roboteq_motor_controller_driver_node_prismatic.cpp  roboteq_motor_controller_driver_node_prismatic_service copy.cpp  roboteq_motor_controller_driver_node_prismatic_service.cpp  roboteq_motor_controller_driver_node_prismatic_service_OLD.cpp  roboteq_motor_controller_driver_node_rpm.cpp  roboteq_motor_controller_driver_node_wheel.cpp  roboteq_motor_controller_driver_node_wheel_spyros.cpp  roboteq_motor_controller_driver_parameters.yaml
ROS-Driver-Update/roboteq_motor_controller_driver/srv/: srv_wrapper.srv
ROS-Driver-Update/roboteq_motor_controller_msgs/: CMakeLists.txt  package.xml
ROS-Driver-Update/roboteq_motor_controller_msgs/msg/: Query.msg
